# python-deep-symlink-loop-windows

./: README.rst  appveyor.yml  setup.cfg  test_symlink_loop.py  tox.ini
