[bdist_wheel]
universal = 1

[metadata]
name = deep-loop-symlink
description = test case with  looped symlinks
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = symlink, pathlib
license = MIT
author = Hiroshi Miura
author_email = miurahr@linux.com
url = http://github.com/miurahr/python-deep-symlink-loop-windows

[options]
setup_requires =
      setuptools
      wheel
      pep517

[options.extras_require]
test =
      pytest
      pytest-timeout
